--- a/src/main/resources/emails/completion.html
+++ b/src/main/resources/emails/completion.html
@@ -1,5 +1,8 @@
-<html><body>
-<p>Dear ${name},</p>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<body>
+<p>Dear <span th:text="${name}"></span>,</p>
 <p>This email is to confirm that your recent counseling session is now marked as complete. We hope it was a helpful and supportive experience.</p>
 <p>If you need further assistance or wish to schedule another session, please don't hesitate to reach out.</p>
-</body></html>
+</body>
+</html>
